ingress/production/root-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: root-ingress
  namespace: production # ***heads'up*** so important.
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging-dns01" # change to production after successfull allocation of SSL via staging issuer
spec:
  tls:
    - hosts:
        # root domain SSL provision
        - "sellerspot.in"

        # all first level domains
        - "*.sellerspot.in" # this will auto provision SSL for first level subdomains (eg: www, ..)

        # all second level domains
        - "*.api.sellerspot.in"
        - "*.pos.sellerspot.in"

      # cert-manager will store the created certificate in this secret.
      secretName: sellerspot.in-letsencrypt-staging-dns # change the name to production after sucessfull allocation of SSL via staging issuer

  rules:
    # landing app route (@ and www domain) serves landing app - whose CTA will call the dashboard route (core - app) (dashboard.sellerspot.in)
    - host: "sellerspot.in"
      http:
        paths:
          - backend:
              serviceName: landing-app
              servicePort: 3000
            path: /
    - host: "www.sellerspot.in"
      http:
        paths:
          - backend:
              serviceName: landing-app
              servicePort: 3000
            path: /

    # core app route - which is the main dashboard route - landing app call to action will redirects the tenant here
    - host: "dashboard.sellerspot.in"
      http:
        paths:
          - backend:
              serviceName: core-app
              servicePort: 3000
            path: /

    # all server api routes will goes here
    # core-server route
    - host: "core.api.sellerspot.in"
      http:
        paths:
          - backend:
              serviceName: core-server
              servicePort: 8000
            path: /

    # point-of-sale-server route
    - host: "pos.api.sellerspot.in"
      http:
        paths:
          - backend:
              serviceName: point-of-sale-server
              servicePort: 8000
            path: /

    # point-of-sale-app route
    - host: "*.pos.sellerspot.in"
      http:
        paths:
          - backend:
              serviceName: point-of-sale-app
              servicePort: 3000
            path: /

    # (default routes should match the ecommerce app later, if not tenant matches the route redirect to landing-app)
    - http:
        paths:
          - backend:
              serviceName: core-app
              servicePort: 3000
            path: /
